forms-styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&family=Raleway:wght@400;500&display=swap");
html {
  height: 100vh;
  width: 100vw;
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  min-height: 100%;
  display: flex;
  flex-direction: column;
}
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #def3fd;
}
/* navbar links */
.nav-holder > li > a {
  color: black;
  text-decoration: none;
  padding: 1rem;
  margin: 0.3rem;
  display: inline-block;
  font-size: 20px;
  position: relative;
  font-weight: 400;
}

.nav-holder > li > a::after {
  content: "";
  position: absolute;
  transform: scaleX(0);
  left: 0;
  bottom: 0;
  width: 100%;
  height: 2px;
  background-color: red;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.nav-holder > li > a:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

#logo {
  margin: 0 0.5rem 0.6rem 0.5rem;
}

/* 4 element ul */
.nav-holder {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 2rem;
  margin-right: 1rem;
}

@media (max-width: 1000px) {
  .nav-holder {
    position: fixed;
    top: -100%;
    flex-direction: column;
    background-color: #fff;
    width: 100%;
    border-radius: 10px;
    text-align: center;
    transition: 0.3s;
    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
  }

  .nav-holder.active {
    top: 10%;
  }

  ul > li {
    margin: 0.5rem 0;
  }

  .hamburger {
    display: block !important;
    cursor: pointer;
  }

  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

.hamburger {
  display: none;
  margin-right: 2rem;
  background-color: transparent;
  border: none;
}

.bar {
  display: block;
  width: 2rem;
  height: 3px;
  margin: 0.3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #101010;
}

.body-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

#sign,
#out {
  display: inline-block;
  padding: 0.3em 1.2em;
  margin: 0 0.3em 0.3em 0;
  border-radius: 2em;
  box-sizing: border-box;
  border-color: #4eb5f1;
  border-style: solid;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: #ffffff;
  background-color: #4eb5f1;
  text-align: center;
  transition: all 0.2s;
  font-size: 2rem;
  flex-grow: 0;
}

#sign:hover,
#out:hover {
  background-color: #4095c6;
  transform: scale(1.1);
}

/* @media all and (max-width: 30em) {
  #sign,
  #out {
    display: block;
    margin: 0.2em auto;
  }
} */

.signin,
.checkout {
  font-size: 1.5rem;
  font-weight: 500;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

hr {
  border-top: 1px solid black;
  width: 80%;
  flex-basis: 100%;
}

